--- a/public/css/searchPopup.css
+++ b/public/css/searchPopup.css
@@ -119,7 +119,7 @@
 
 /* Results */
 .mongo-result {
-  background: #f9f9f9;
+  background-color: rgba(200, 200, 200, 1);
   border: 1px solid #ccc;
   border-radius: 4px;
   margin: 4px 0;
@@ -134,9 +134,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2px 8px;
+  padding: 4px 8px;
   background: #fefaf2;
-  border-bottom: 1px solid #ddd;
+  border: 2px solid #ccc;
+  margin: 1px;
 }
 
 .mongo-path span {
@@ -161,11 +162,12 @@
 
 .mongo-snippet,
 .full-content {
-  margin: 0;
   padding: 4px 8px;
   background: #fff;
   font-size: 13px;
   line-height: 1.3;
+  border: 2px solid #ccc;
+  margin: 1px;
 }
 
 .mongo-snippet mark,
