--- a/public/css/searchPopup.css
+++ b/public/css/searchPopup.css
@@ -168,6 +168,9 @@
   line-height: 1.3;
   border: 2px solid #ccc;
   margin: 1px;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 .mongo-snippet mark,
