Make README on home page reflect accurately

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -444,3 +444,16 @@ a.nodrop:visited {
   width: 100%;
   text-align: center;
 }
+div#readme-container {
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  font-size: 16px;
+  color: black;
+}
+div#readme-container pre {
+  color: black;
+  background-color: rgba(200, 200, 200, 1);
+}
