--- a/public/css/searchPopup.css
+++ b/public/css/searchPopup.css
@@ -263,4 +263,9 @@
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
 }
-
+.no-results {
+  padding: 1rem;
+  color: #666;
+  font-style: italic;
+  text-align: center;
+}
